browse.styl: fix z-index bug

--- a/www/css/browse.styl
+++ b/www/css/browse.styl
@@ -535,8 +535,10 @@ ul
   &.show
     display block
     opacity 1
+    z-index 1000
     transition opacity 0.5s
 
+  z-index -1
   display block
   opacity 0
   transition opacity 0.5s
